--- a/requirements.txt
+++ b/requirements.txt
@@ -1,199 +1,15 @@
-﻿absl-py==2.3.1
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aiohttp-retry==2.9.1
-aiosignal==1.4.0
-annotated-types==0.7.0
-anyio==4.6.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.9.1
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==24.2.0
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blinker==1.9.0
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.3.2
-click==8.2.1
-colorama==0.4.6
-comm==0.2.2
-comtypes==1.4.5
-contourpy==1.3.1
-cycler==0.12.1
-debugpy==1.8.6
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.8
 Django==5.2.6
-et-xmlfile==1.1.0
-executing==2.1.0
-fastapi==0.116.1
-fastjsonschema==2.20.0
-filelock==3.15.4
-Flask==3.1.2
-flatbuffers==25.2.10
-fonttools==4.55.3
-fqdn==1.5.1
-frozenlist==1.8.0
-fsspec==2025.10.0
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.73.1
-h11==0.14.0
-h5py==3.14.0
-httpcore==1.0.6
-httpx==0.27.2
-idna==3.10
-ipykernel==6.29.5
-ipython==8.28.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-itsdangerous==2.2.0
-jax==0.7.1
-jaxlib==0.7.1
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.5.1
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
-keras==3.10.0
-kiwisolver==1.4.8
-libclang==18.1.1
-Markdown==3.8.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.10.0
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-memory-profiler==0.61.0
-mistune==3.0.2
-ml_dtypes==0.5.1
-MouseInfo==0.1.3
-mpmath==1.3.0
-multidict==6.7.0
-mysql-connector-python==9.4.0
-namex==0.1.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.5
-nltk==3.9.2
-notebook==7.2.2
-notebook_shim==0.2.4
-numpy==1.26.4
-opencv-contrib-python==4.11.0.86
-opencv-python==4.12.0.88
-openpyxl==3.1.5
-opt_einsum==3.4.0
-optree==0.16.0
-overrides==7.7.0
-packaging==24.1
-pandas==2.3.3
-pandocfilters==1.5.1
-parso==0.8.4
-pillow==11.1.0
-platformdirs==4.2.2
-prometheus_client==0.21.0
-prompt_toolkit==3.0.48
-propcache==0.4.1
-protobuf==4.25.8
-psutil==6.0.0
-pure_eval==0.2.3
-PyAutoGUI==0.9.54
-pycparser==2.22
-pydantic==2.11.9
-pydantic_core==2.33.2
-PyGetWindow==0.0.9
-Pygments==2.18.0
-PyJWT==2.10.1
-PyMsgBox==2.0.1
-pyparsing==3.2.1
-pyperclip==1.11.0
-pypiwin32==223
-PyRect==0.2.0
-PyScreeze==1.0.1
-python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-pyttsx3==2.90
-pytweening==1.2.0
-pytz==2025.2
-pywhatkit==5.4
-pywin32==306
-pywinpty==2.0.13
-PyYAML==6.0.2
-pyzmq==26.2.0
-referencing==0.35.1
-regex==2025.11.3
-requests==2.32.3
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==14.0.0
-rpds-py==0.20.0
-scikit-learn==1.7.0
-scipy==1.16.0
-seaborn==0.13.2
-Send2Trash==1.8.3
-sentencepiece==0.2.1
-setuptools==75.1.0
-six==1.17.0
-sniffio==1.3.1
-sounddevice==0.5.3
-soupsieve==2.6
+asgiref==3.9.1
+mysql-connector-python==9.4.0   # Only if using MySQL, else use psycopg2 for PostgreSQL
 sqlparse==0.5.3
-stack-data==0.6.3
-starlette==0.47.3
-sympy==1.14.0
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-termcolor==3.1.0
-terminado==0.18.1
-threadpoolctl==3.6.0
-tinycss2==1.3.0
-torch==2.9.1
-torchaudio==2.9.1
-torchvision==0.24.1
-tornado==6.4.1
-tqdm==4.67.1
-traitlets==5.14.3
-twilio==9.8.6
-types-python-dateutil==2.9.0.20241003
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-tzdata==2025.2
-uri-template==1.3.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.3
+bleach==6.1.0
+beautifulsoup4==4.12.3
+lxml==5.1.2   # Optional, if you use XML/HTML parsing
+certifi==2024.8.30
+charset-normalizer==3.3.2
+idna==3.10
 urllib3==2.2.3
-uvicorn==0.35.0
-virtualenv==20.26.3
-wcwidth==0.2.13
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
-Werkzeug==3.1.3
-wheel==0.45.1
-widgetsnbextension==4.0.13
-wikipedia==1.4.0
-wrapt==1.17.2
-yarl==1.22.0
-
+click==8.2.1   # Useful for management commands
