--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-0Django==5.2.6
+Django==5.2.6
 asgiref==3.9.1
 mysql-connector-python==9.4.0
 sqlparse==0.5.3
@@ -15,4 +15,5 @@ charset-normalizer==3.3.2
 idna==3.10
 urllib3==2.2.3
 gunicorn==23.0.0
+
 
