--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ idna==3.10
 urllib3==2.2.3
 gunicorn==23.0.0
 PyMySQL==1.1.1
-djangorestframework>=3.18,<3.19
+djangorestframework==3.18.1
+
+
 
 
 
